[package]
name = "rsst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen-futures = "0.4"
reqwasm = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
log = "0.4"
wasm-logger = "0.2"
minidom = "0.14"
