[package]
name = "rsst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen-futures = "0.4"
reqwasm = "0.2"
log = "0.4"
wasm-logger = "0.2"
minidom = "0.14"
gloo-utils = "0.1"
regex = "1.5"
rayon = "1.5"
tokio = "1.20"
